fix(Breadcrumb): Spacing prop + contrast colors
Add screenshots

--- a/packages/dnb-eufemia/src/components/section/style/themes/dnb-section-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/section/style/themes/dnb-section-theme-ui.scss
@@ -95,14 +95,16 @@
   // Contrast styles
   &--fire-red .dnb-anchor,
   &--emerald-green .dnb-anchor,
-  &--sea-green .dnb-anchor {
+  &--sea-green .dnb-anchor,
+  &--fire-red .dnb-button--tertiary,
+  &--emerald-green .dnb-button--tertiary,
+  &--sea-green .dnb-button--tertiary {
     color: var(--color-white);
     &:hover {
-      color: var(--color-sea-green);
+      color: var(--color-white);
     }
     &:focus {
       color: var(--color-white);
-      @include fakeFocus(null, var(--color-black-8));
     }
   }
 
